fixed overflow of home page

--- a/react-app/src/components/HeroSection.css
+++ b/react-app/src/components/HeroSection.css
@@ -112,6 +112,7 @@ header h1 {
 .popular {
     margin-left: 10%;
     margin-top: 10%;
+    margin-right: 10%;
 }
 
 .nearme {
